fixing easy to fix deprecated code